fixed horizontal scroll on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -146,12 +146,13 @@ footer{
         width:100%;
         padding:10px;
         margin:0 auto;
-        margin-right:25px;
+        // margin-right:25px;
         display:inline-block;
         text-align: center;
     }
     a{
         color:$black;
+        font-style:italic;
     }
 }
 @import "partials/queries";
